kubernetes/apps/networking/sabnzbd/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
spec:
  type: ExternalName
  externalName: media-pvr.home.lan
